css/gallery.scss
---
---

$default-width: 50%;

* {
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
}

/* force scrollbar, prevents initial gap */
html {
  overflow-y: scroll;
}


h1.gallery-title{
  margin-bottom: 20px;
}

.image-wrapper,
.gallery-sizer {
  width: $default-width;
}

.image-gallery {

  display: block;

  .image-wrapper {
    float: left;
    // padding: 1px 1px;
    // transition: background 0.4s, box-shadow 0.4s; // TODO: useless?
    overflow: hidden;
    // max-width: 100%; // unnecessary?

    // hack required if no padding
    // .image {
    //   width: 100.1%;
    //   width: calc( 100% + 1px );
    //   height: 100.1%;
    // }

    img {
      // max-width: 100%;
      display: block;
      -webkit-transform: scale(1);
      transform: scale(1);
      -webkit-transition: .3s ease;
      transition: .3s ease;

      &:hover{
        opacity: 0.8;
        -webkit-transform: scale(1.02);
        transform: scale(1.02);
      }
    }
  }

  &:after {
    // content: '';
    display: block;
    clear: both;
  }
}

.caption {
  position: static;
  color: #AAA;
}

